--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -14,6 +14,13 @@
       Calendrier
     </a>
 
+    <a
+      color='primary'
+      href='/manage/users'
+      mat-raised-button>
+      Utilisateurs
+    </a>
+
     <div *ngIf='authService.isAuthenticated()' class='backdrop-blur flex items-center justify-around text-sm'>
       <mat-icon aria-hidden='false' aria-label='Account Icon' fontIcon='person' />
       <div class='flex flex-col items-center justify-center'>
